--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -31,4 +31,14 @@
     padding:10px 30px;
     border-radius:50px;
     cursor:pointer;
+    transition: 0.3s;
+}
+
+.navbar button:hover{
+    background-color:#fff4f2;
+}
+
+.navbar .active{
+    padding-bottom:2px;
+    border-bottom:2px solid #49557e;
 }
