--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -23,3 +23,15 @@
 .explore-menu-list::-webkit-scrollbar{
     display:none;
 }
+.explore-menu-list-item img{
+    width: 7.5vw;
+    min-width:80px;
+    border-radius:50%;
+    transition: 0.2s;
+}
+.explore-menu-list-item p{
+    margin-top:10px;
+    color: #747474;
+    font-size:max(1.4vw,16px);
+    cursor:pointer;
+}
