--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -35,3 +35,9 @@
     font-size:max(1.4vw,16px);
     cursor:pointer;
 }
+.explore-menu hr{
+    margin: 10px 0px;
+    height:2px;
+    background-color:#e2e2e2;
+    border:none;
+}
