--- a/frontend/src/components/AppDownload/AppDownload.css
+++ b/frontend/src/components/AppDownload/AppDownload.css
@@ -16,5 +16,7 @@
     max-width:180px;
     transition: 0.5s;
     cursor:pointer;
-    
+}
+.app-download-plateforms img:hover{
+    transform: scale(1.05);
 }
