--- a/frontend/src/components/LoginPopup/LoginPopup.css
+++ b/frontend/src/components/LoginPopup/LoginPopup.css
@@ -19,3 +19,13 @@
     font-size: 14px;
     animation: fadeIn 0.5s;
 }
+.login-popup-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color:black
+}
+.login-popup-title img{
+    width:16px;
+    cursor: pointer;
+}
