login page comp

--- a/frontend/src/components/LoginPopup/LoginPopup.css
+++ b/frontend/src/components/LoginPopup/LoginPopup.css
@@ -29,3 +29,39 @@
     width:16px;
     cursor: pointer;
 }
+.login-popup-inputs{
+    display:flex;
+    flex-direction: column;
+    gap:20px;
+}
+.login-popup-inputs input{
+  outline: none;
+  border:1px solid #c9c9c9;
+  border-radius:4px;
+  padding:10px;
+}
+.login-popup-container button{
+    border:none;
+    padding:10px;
+    border-radius: 4px;
+    color:white;
+    background-color: tomato;
+    font-size: 15px;
+    cursor: pointer;
+}
+.login-popup-condition{
+    display:flex;
+    align-items: start;
+    gap:8px;
+    margin-top:-15px;
+}
+.login-popup-condition input{
+    margin-top: 5px;
+}
+.login-popup p span{
+    color:tomato;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+
